package main

import (
	"context"
	"encoding/binary"
	"fmt"
	"hash/fnv"
	"log"
	"runtime"
	"sync"
	"time"
	"unsafe"

	"github.com/redis/go-redis/v9"
)

// TensorMemoryManager handles multi-tier caching with GPU awareness
type TensorMemoryManager struct {
	// Memory tiers
	gpuMemory    *GPUBufferPool
	ramCache     *sync.Map // Hot tensors in RAM
	redisClient  *redis.Client
	mmapFiles    map[string]*MemoryMappedTensor
	mmapMutex    sync.RWMutex

	// Memory optimization
	gcPool       sync.Pool
	evictionChan chan string
	metrics      *TensorMetrics

	// Configuration
	maxGPUMemory   uint64
	maxRAMCache    uint64
	currentGPUMem  uint64
	currentRAMMem  uint64
}

// TensorCache protobuf-like structure for serialization
type TensorCache struct {
	ID         string
	Shape      []uint64
	Dtype      string
	Data       []byte // bit-packed tensor data
	References []string // parent case/document IDs
	LODLevel   int32  // Level of Detail: 0=full, 1=half, 2=quarter
	GPUOffset  uint64 // offset in GPU buffer if loaded
	Timestamp  int64
}

// MemoryMappedTensor represents a tensor stored in memory-mapped file
type MemoryMappedTensor struct {
	file   uintptr // Windows HANDLE
	data   []byte  // memory-mapped slice
	size   uint64
	offset uint64
}

// GPUBufferPool manages GPU memory buffers with LoD
type GPUBufferPool struct {
	buffers     map[string]*GPUBuffer
	totalMemory uint64
	usedMemory  uint64
	lodLevels   []float32 // [1.0, 0.5, 0.25] for different quality levels
	mutex       sync.RWMutex
}

type GPUBuffer struct {
	ID       string
	Data     []byte
	LODLevel int
	Size     uint64
	LastUsed time.Time
	RefCount int32
}

type TensorMetrics struct {
	GPUHits      uint64
	RAMHits      uint64
	RedisHits    uint64
	MMapHits     uint64
	TotalQueries uint64
	EvictedCount uint64
	mutex        sync.RWMutex
}

// NewTensorMemoryManager creates a new multi-tier tensor cache manager
func NewTensorMemoryManager(redisClient *redis.Client, maxGPUMB, maxRAMMB uint64) *TensorMemoryManager {
	tmm := &TensorMemoryManager{
		gpuMemory:    NewGPUBufferPool(maxGPUMB * 1024 * 1024),
		ramCache:     &sync.Map{},
		redisClient:  redisClient,
		mmapFiles:    make(map[string]*MemoryMappedTensor),
		evictionChan: make(chan string, 1000),
		metrics:      &TensorMetrics{},
		maxGPUMemory: maxGPUMB * 1024 * 1024,
		maxRAMCache:  maxRAMMB * 1024 * 1024,
	}

	// Initialize memory pool for reuse
	tmm.gcPool = sync.Pool{
		New: func() interface{} {
			return make([]byte, 0, 4096) // 4KB initial capacity
		},
	}

	// Start background eviction worker
	go tmm.evictionWorker()

	// Start memory monitoring
	go tmm.memoryMonitor()

	return tmm
}

// GetTensor retrieves tensor with intelligent tier traversal
func (tmm *TensorMemoryManager) GetTensor(ctx context.Context, tensorID string, requiredLOD int) (*TensorCache, error) {
	tmm.metrics.mutex.Lock()
	tmm.metrics.TotalQueries++
	tmm.metrics.mutex.Unlock()

	start := time.Now()
	defer func() {
		log.Printf("üîç Tensor %s retrieval took %v", tensorID, time.Since(start))
	}()

	// Tier 0: Check GPU buffer first (fastest)
	if tensor := tmm.gpuMemory.Get(tensorID, requiredLOD); tensor != nil {
		tmm.metrics.mutex.Lock()
		tmm.metrics.GPUHits++
		tmm.metrics.mutex.Unlock()
		log.Printf("üéÆ GPU cache hit for %s (LoD %d)", tensorID, requiredLOD)
		return tmm.deserializeTensor(tensor.Data), nil
	}

	// Tier 1: Check RAM cache
	if cached, ok := tmm.ramCache.Load(tensorID); ok {
		tensor := cached.(*TensorCache)
		if tensor.LODLevel <= int32(requiredLOD) {
			tmm.metrics.mutex.Lock()
			tmm.metrics.RAMHits++
			tmm.metrics.mutex.Unlock()

			// Promote to GPU if space available
			go tmm.promoteToGPU(tensor)
			log.Printf("üíæ RAM cache hit for %s", tensorID)
			return tensor, nil
		}
	}

	// Tier 2: Check Redis
	redisKey := fmt.Sprintf("tensor:%s:lod%d", tensorID, requiredLOD)
	cached, err := tmm.redisClient.Get(ctx, redisKey).Bytes()
	if err == nil {
		tensor := tmm.deserializeTensor(cached)
		tmm.metrics.mutex.Lock()
		tmm.metrics.RedisHits++
		tmm.metrics.mutex.Unlock()

		// Cache in RAM for future access
		tmm.ramCache.Store(tensorID, tensor)
		log.Printf("üì¶ Redis cache hit for %s", tensorID)
		return tensor, nil
	}

	// Tier 3: Check memory-mapped files
	if mmapTensor := tmm.getFromMMap(tensorID, requiredLOD); mmapTensor != nil {
		tmm.metrics.mutex.Lock()
		tmm.metrics.MMapHits++
		tmm.metrics.mutex.Unlock()

		// Cache in Redis and RAM
		go tmm.cacheInRedis(ctx, mmapTensor)
		tmm.ramCache.Store(tensorID, mmapTensor)
		log.Printf("üóÇÔ∏è Memory-mapped file hit for %s", tensorID)
		return mmapTensor, nil
	}

	return nil, fmt.Errorf("tensor %s not found in any cache tier", tensorID)
}

// StoreTensor stores tensor with intelligent tier placement
func (tmm *TensorMemoryManager) StoreTensor(ctx context.Context, tensor *TensorCache) error {
	// Calculate tensor size
	tensorSize := uint64(len(tensor.Data))

	// Generate different LoD versions for efficient GPU memory usage
	lodVersions := tmm.generateLODVersions(tensor)

	// Store all LoD versions
	for _, lodTensor := range lodVersions {
		// Always store in Redis for persistence
		if err := tmm.storeInRedis(ctx, lodTensor); err != nil {
			log.Printf("‚ùå Failed to store tensor %s in Redis: %v", lodTensor.ID, err)
		}

		// Store in RAM if space available
		if tmm.currentRAMMem+tensorSize < tmm.maxRAMCache {
			tmm.ramCache.Store(lodTensor.ID, lodTensor)
			tmm.currentRAMMem += tensorSize
			log.Printf("üíæ Stored tensor %s in RAM cache", lodTensor.ID)
		}

		// Store in GPU if high priority and space available
		if lodTensor.LODLevel == 0 && tmm.currentGPUMem+tensorSize < tmm.maxGPUMemory {
			tmm.gpuMemory.Store(lodTensor)
			tmm.currentGPUMem += tensorSize
			log.Printf("üéÆ Stored tensor %s in GPU buffer", lodTensor.ID)
		}

		// Always create memory-mapped backup for exabyte-scale addressing
		if err := tmm.storeInMMap(lodTensor); err != nil {
			log.Printf("‚ö†Ô∏è Failed to create memory-mapped backup for %s: %v", lodTensor.ID, err)
		}
	}

	return nil
}

// generateLODVersions creates multiple Level-of-Detail versions for GPU efficiency
func (tmm *TensorMemoryManager) generateLODVersions(tensor *TensorCache) []*TensorCache {
	versions := []*TensorCache{}

	// Full resolution (LoD 0)
	fullVersion := &TensorCache{
		ID:         tensor.ID,
		Shape:      tensor.Shape,
		Dtype:      tensor.Dtype,
		Data:       tensor.Data,
		References: tensor.References,
		LODLevel:   0,
		Timestamp:  time.Now().UnixNano(),
	}
	versions = append(versions, fullVersion)

	// Half resolution (LoD 1) - bit-pack to Float16
	if len(tensor.Data) > 1024 { // Only for larger tensors
		halfData := tmm.packToFloat16(tensor.Data)
		halfVersion := &TensorCache{
			ID:         fmt.Sprintf("%s_lod1", tensor.ID),
			Shape:      tensor.Shape,
			Dtype:      "float16",
			Data:       halfData,
			References: tensor.References,
			LODLevel:   1,
			Timestamp:  time.Now().UnixNano(),
		}
		versions = append(versions, halfVersion)
	}

	// Quarter resolution (LoD 2) - quantize to Int8
	if len(tensor.Data) > 4096 { // Only for very large tensors
		quarterData := tmm.quantizeToInt8(tensor.Data)
		quarterVersion := &TensorCache{
			ID:         fmt.Sprintf("%s_lod2", tensor.ID),
			Shape:      tensor.Shape,
			Dtype:      "int8",
			Data:       quarterData,
			References: tensor.References,
			LODLevel:   2,
			Timestamp:  time.Now().UnixNano(),
		}
		versions = append(versions, quarterVersion)
	}

	return versions
}

// packToFloat16 converts Float32 data to Float16 for 50% memory reduction
func (tmm *TensorMemoryManager) packToFloat16(data []byte) []byte {
	if len(data)%4 != 0 {
		return data // Not float32 data
	}

	float32Count := len(data) / 4
	float16Data := tmm.gcPool.Get().([]byte)
	float16Data = float16Data[:0] // Reset slice

	for i := 0; i < float32Count; i++ {
		// Extract float32
		bits := binary.LittleEndian.Uint32(data[i*4 : (i+1)*4])
		f32 := *(*float32)(unsafe.Pointer(&bits))

		// Convert to float16 (simplified)
		f16 := uint16(f32 * 65535.0) // Simple quantization

		// Append to result
		f16Bytes := make([]byte, 2)
		binary.LittleEndian.PutUint16(f16Bytes, f16)
		float16Data = append(float16Data, f16Bytes...)
	}

	result := make([]byte, len(float16Data))
	copy(result, float16Data)
	tmm.gcPool.Put(float16Data)

	return result
}

// quantizeToInt8 converts data to Int8 for 75% memory reduction
func (tmm *TensorMemoryManager) quantizeToInt8(data []byte) []byte {
	if len(data)%4 != 0 {
		return data
	}

	float32Count := len(data) / 4
	int8Data := make([]byte, float32Count)

	// Find min/max for quantization scale
	var min, max float32 = 1e10, -1e10
	for i := 0; i < float32Count; i++ {
		bits := binary.LittleEndian.Uint32(data[i*4 : (i+1)*4])
		f32 := *(*float32)(unsafe.Pointer(&bits))
		if f32 < min {
			min = f32
		}
		if f32 > max {
			max = f32
		}
	}

	scale := (max - min) / 255.0
	if scale == 0 {
		scale = 1
	}

	// Quantize to int8
	for i := 0; i < float32Count; i++ {
		bits := binary.LittleEndian.Uint32(data[i*4 : (i+1)*4])
		f32 := *(*float32)(unsafe.Pointer(&bits))
		quantized := int8((f32 - min) / scale)
		int8Data[i] = byte(quantized)
	}

	// Prepend scale for dequantization
	result := make([]byte, 4+len(int8Data))
	binary.LittleEndian.PutUint32(result[:4], *(*uint32)(unsafe.Pointer(&scale)))
	copy(result[4:], int8Data)

	return result
}

// storeInMMap creates memory-mapped file for exabyte-scale addressing
func (tmm *TensorMemoryManager) storeInMMap(tensor *TensorCache) error {
	// Generate 64-bit file path from tensor ID
	hash := fnv.New64a()
	hash.Write([]byte(tensor.ID))
	fileID := hash.Sum64()

	// Create hierarchical directory structure for exabyte addressing
	dir1 := (fileID >> 56) & 0xFF // Top 8 bits
	dir2 := (fileID >> 48) & 0xFF // Next 8 bits
	filename := fmt.Sprintf("tensors/%02x/%02x/%016x.bin", dir1, dir2, fileID)

	// On Windows, use CreateFileMapping for memory-mapped files
	// This is a simplified version - full implementation would use Windows API
	log.Printf("üóÇÔ∏è Would create memory-mapped file: %s", filename)

	// Store mapping info for later retrieval
	tmm.mmapMutex.Lock()
	tmm.mmapFiles[tensor.ID] = &MemoryMappedTensor{
		file:   0, // Would be actual Windows HANDLE
		data:   tensor.Data,
		size:   uint64(len(tensor.Data)),
		offset: fileID,
	}
	tmm.mmapMutex.Unlock()

	return nil
}

// Redis storage with protobuf-like serialization
func (tmm *TensorMemoryManager) storeInRedis(ctx context.Context, tensor *TensorCache) error {
	// Serialize tensor (in production, use actual protobuf)
	serialized, err := tmm.serializeTensor(tensor)
	if err != nil {
		return err
	}

	redisKey := fmt.Sprintf("tensor:%s:lod%d", tensor.ID, tensor.LODLevel)
	return tmm.redisClient.Set(ctx, redisKey, serialized, 24*time.Hour).Err()
}

// Simplified serialization (use protobuf in production)
func (tmm *TensorMemoryManager) serializeTensor(tensor *TensorCache) ([]byte, error) {
	// This would use actual protobuf marshaling
	return tensor.Data, nil
}

func (tmm *TensorMemoryManager) deserializeTensor(data []byte) *TensorCache {
	// This would use actual protobuf unmarshaling
	return &TensorCache{
		Data: data,
	}
}

// GPU Buffer Pool implementation
func NewGPUBufferPool(maxMemory uint64) *GPUBufferPool {
	return &GPUBufferPool{
		buffers:     make(map[string]*GPUBuffer),
		totalMemory: maxMemory,
		usedMemory:  0,
		lodLevels:   []float32{1.0, 0.5, 0.25},
	}
}

func (pool *GPUBufferPool) Get(tensorID string, requiredLOD int) *GPUBuffer {
	pool.mutex.RLock()
	defer pool.mutex.RUnlock()

	if buffer, exists := pool.buffers[tensorID]; exists && buffer.LODLevel <= requiredLOD {
		buffer.LastUsed = time.Now()
		return buffer
	}
	return nil
}

func (pool *GPUBufferPool) Store(tensor *TensorCache) bool {
	pool.mutex.Lock()
	defer pool.mutex.Unlock()

	tensorSize := uint64(len(tensor.Data))
	if pool.usedMemory+tensorSize > pool.totalMemory {
		// Evict LRU buffers
		pool.evictLRU(tensorSize)
	}

	if pool.usedMemory+tensorSize <= pool.totalMemory {
		buffer := &GPUBuffer{
			ID:       tensor.ID,
			Data:     tensor.Data,
			LODLevel: int(tensor.LODLevel),
			Size:     tensorSize,
			LastUsed: time.Now(),
			RefCount: 1,
		}
		pool.buffers[tensor.ID] = buffer
		pool.usedMemory += tensorSize
		return true
	}
	return false
}

func (pool *GPUBufferPool) evictLRU(neededSpace uint64) {
	// Simple LRU eviction - in production, use more sophisticated policy
	oldestTime := time.Now()
	var oldestID string

	for id, buffer := range pool.buffers {
		if buffer.LastUsed.Before(oldestTime) && buffer.RefCount == 0 {
			oldestTime = buffer.LastUsed
			oldestID = id
		}
	}

	if oldestID != "" {
		buffer := pool.buffers[oldestID]
		pool.usedMemory -= buffer.Size
		delete(pool.buffers, oldestID)
		log.Printf("üóëÔ∏è Evicted GPU buffer %s (freed %d bytes)", oldestID, buffer.Size)
	}
}

// Background workers
func (tmm *TensorMemoryManager) evictionWorker() {
	ticker := time.NewTicker(30 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case tensorID := <-tmm.evictionChan:
			tmm.ramCache.Delete(tensorID)
			log.Printf("üóëÔ∏è Evicted tensor %s from RAM cache", tensorID)
		case <-ticker.C:
			tmm.performGC()
		}
	}
}

func (tmm *TensorMemoryManager) memoryMonitor() {
	ticker := time.NewTicker(10 * time.Second)
	defer ticker.Stop()

	for range ticker.C {
		var m runtime.MemStats
		runtime.GC()
		runtime.ReadMemStats(&m)

		log.Printf("üìä Memory: GPU %d/%d MB, RAM %d/%d MB, Go heap %d MB",
			tmm.currentGPUMem/(1024*1024), tmm.maxGPUMemory/(1024*1024),
			tmm.currentRAMMem/(1024*1024), tmm.maxRAMCache/(1024*1024),
			m.Alloc/(1024*1024))
	}
}

func (tmm *TensorMemoryManager) performGC() {
	// Force garbage collection
	runtime.GC()

	// Check memory pressure and trigger evictions if needed
	var m runtime.MemStats
	runtime.ReadMemStats(&m)

	if m.Alloc > tmm.maxRAMCache*3/4 {
		log.Printf("üíæ High memory pressure, triggering evictions")
		// Trigger evictions of old tensors
		tmm.ramCache.Range(func(key, value interface{}) bool {
			tensor := value.(*TensorCache)
			if time.Now().UnixNano()-tensor.Timestamp > int64(5*time.Minute) {
				tmm.evictionChan <- key.(string)
			}
			return true
		})
	}
}

// Helper methods
func (tmm *TensorMemoryManager) getFromMMap(tensorID string, requiredLOD int) *TensorCache {
	tmm.mmapMutex.RLock()
	defer tmm.mmapMutex.RUnlock()

	if mmapTensor, exists := tmm.mmapFiles[tensorID]; exists {
		return &TensorCache{
			ID:       tensorID,
			Data:     mmapTensor.data,
			LODLevel: int32(requiredLOD),
		}
	}
	return nil
}

func (tmm *TensorMemoryManager) promoteToGPU(tensor *TensorCache) {
	if tmm.gpuMemory.Store(tensor) {
		log.Printf("‚¨ÜÔ∏è Promoted tensor %s to GPU", tensor.ID)
	}
}

func (tmm *TensorMemoryManager) cacheInRedis(ctx context.Context, tensor *TensorCache) {
	if err := tmm.storeInRedis(ctx, tensor); err != nil {
		log.Printf("‚ùå Failed to cache tensor %s in Redis: %v", tensor.ID, err)
	}
}

// GetMetrics returns current cache performance metrics
func (tmm *TensorMemoryManager) GetMetrics() map[string]interface{} {
	tmm.metrics.mutex.RLock()
	defer tmm.metrics.mutex.RUnlock()

	totalHits := tmm.metrics.GPUHits + tmm.metrics.RAMHits + tmm.metrics.RedisHits + tmm.metrics.MMapHits
	hitRate := float64(0)
	if tmm.metrics.TotalQueries > 0 {
		hitRate = float64(totalHits) / float64(tmm.metrics.TotalQueries) * 100
	}

	return map[string]interface{}{
		"total_queries": tmm.metrics.TotalQueries,
		"hit_rate":      hitRate,
		"gpu_hits":      tmm.metrics.GPUHits,
		"ram_hits":      tmm.metrics.RAMHits,
		"redis_hits":    tmm.metrics.RedisHits,
		"mmap_hits":     tmm.metrics.MMapHits,
		"evicted_count": tmm.metrics.EvictedCount,
		"gpu_memory":    fmt.Sprintf("%d/%d MB", tmm.currentGPUMem/(1024*1024), tmm.maxGPUMemory/(1024*1024)),
		"ram_memory":    fmt.Sprintf("%d/%d MB", tmm.currentRAMMem/(1024*1024), tmm.maxRAMCache/(1024*1024)),
	}
}